# lalli

./: .gitignore  CMakeLists.txt  lalli.code-workspace
src/: chip8.c  chip8.h  main.c
